--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.3",
+    "react-uuid": "^2.0.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
